--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@ button:hover {
 
     <!-- Contenu principal -->
     <div class="container">
-        <h1>Bienvenue sur urgencescolaire, un soutien Scolaire Instantané</h1>
+        <h1>Bienvenue sur <urgencescolaire class="com"></urgencescolaire>, un soutien Scolaire Instantané</h1>
         <p>
             Ici, les élèves peuvent obtenir de l’aide pour leurs devoirs <strong>en temps réel</strong>.<br>
             Vous êtes en <strong>urgence de trouver un professeur</strong> ? Inscrivez vous et des professeurs qualifiés vous assistera rapidement.<br>
