--- a/public/prof_dashboard.html
+++ b/public/prof_dashboard.html
@@ -230,10 +230,12 @@ let allAppels = [];
 let filteredAppels = [];
 
 // ===== WEBSOCKET =====
-const WS_URL = (location.protocol === 'https:' ? 'wss://' : 'ws://') + location.host;
+// 👉 WebSocket fixé sur ton serveur local : http://localhost:10000
+const WS_URL = "ws://localhost:10000";
 let ws = null;
 
 function initWebSocket() {
+  console.log("Connexion WebSocket →", WS_URL);
   ws = new WebSocket(WS_URL);
 
   ws.onopen = () => {
